--- a/controllers/Forgetpassword.ejs
+++ b/controllers/Forgetpassword.ejs
@@ -456,7 +456,7 @@
                               <div class="v-text-align" align="center">
                                 <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://www.unlayer.com" style="height:58px; v-text-anchor:middle; width:226px;" arcsize="43%"  stroke="f" fillcolor="#fdb441"><w:anchorlock/><center style="color:#000000;font-family:'Raleway',sans-serif;"><![endif]-->
                                 <a
-                                  href="https://www.infinityiat.io/reset-password/<%= action_url %>"
+                                  href="https://infinityiat.io/reset-password/<%= action_url %>"
                                   target="_blank"
                                   class="v-button v-size-width v-font-size"
                                   style="
